test/spec_vectors/block/fail/module_143.wat
(module (func $type-break-operand-void-vs-f32 (result f32) (f32.floor (block (br 0 (nop))))))